kubectl/login-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.34.0 (cbf2835db)
  labels:
    io.kompose.service: login-service
  name: login-service
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: login-service
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.34.0 (cbf2835db)
      labels:
        io.kompose.service: login-service
    spec:
      containers:
        - image: dyllgold/login-service:latest
          name: login-service
          ports:
            - containerPort: 3003
              protocol: TCP
      restartPolicy: Always
