kubectl/usuarios-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.34.0 (cbf2835db)
  labels:
    io.kompose.service: usuarios-service
  name: usuarios-service
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: usuarios-service
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.34.0 (cbf2835db)
      labels:
        io.kompose.service: usuarios-service
    spec:
      containers:
        - image: dyllgold/usuarios-service:latest
          name: usuarios-service
          ports:
            - containerPort: 3001
              protocol: TCP
      restartPolicy: Always
