kubectl/mysql-loabBalancer-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql-container
spec:
  type: LoadBalancer
  ports:
    - port: 3312    
      targetPort: 3306    
  selector:
    app: mysql
