kubectl/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - http:
      paths:
      - path: /api/juegos
        pathType: Prefix
        backend:
          service:
            name: juegos-service
            port:
              number: 3002
      - path: /api/login
        pathType: Prefix
        backend:
          service:
            name: login-service
            port:
              number: 3003
      - path: /api/usuarios
        pathType: Prefix
        backend:
          service:
            name: usuarios-service
            port:
              number: 3001
